[package]
name = "hellogauges" 
description = "Gauge Components for the Yew framework."
readme = "README.md"
homepage = "https://github.com:adrianromero/hellogauges"
repository = "git@github.com:adrianromero/hellogauges.git"
documentation = "https://docs.rs/hellogauges"
keywords = ["wasm", "yew", "ui-components"]
categories = ["wasm", "web-programming", "gui"]
license = "Apache-2.0"
version = "0.1.0"
authors = ["Adrián Romero"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"
yew = "0.19.3"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = "s"
